# Durak2

./: CMakeLists.txt  Doxyfile  README.md
src/: Button.cpp  Card.cpp  Deck.cpp  Game.cpp  GameScreen.hpp  MainMenu.cpp  MainScreen.cpp  Player.cpp  ResourceManager.cpp  Table.cpp  main.cpp
src/Core/: FileManager.cpp  Game.cpp  ResourceManager.cpp
src/Core/headers/: Debug.hpp  FileManager.hpp  Game.hpp  ResourceManager.hpp
src/GameLogic/: Card.cpp  Deck.cpp  Table.cpp
src/GameLogic/headers/: Card.hpp  Deck.hpp  Player.hpp  Table.hpp
src/UI/: Button.cpp  GameScreen.cpp  MainScreen.cpp  SettingsScreen.cpp
src/UI/headers/: Button.hpp  GameScreen.hpp  MainScreen.hpp  Screen.hpp  SettingsScreen.hpp
src/headers/: Button.hpp  Card.hpp  Debug.hpp  Deck.hpp  Files.hpp  Game.hpp  GameScreen.hpp  MainMenu.hpp  MainScreen.hpp  Player.hpp  ResourceManager.hpp  Screen.hpp  SettingsScreen.hpp  Table.hpp
